<resources>
    <string name="app_name">Concat</string>

    <string-array name="modelNames">
        <item>Cube</item>
        <item>Sphere</item>
        <item>Kitchen Chair</item>
        <item>Monitor</item>
        <item>Round Table</item>
<!--        <item>White Table</item>-->

    </string-array>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="choose">Choose which object to place</string>
    <string name="length">Enter Length (in):</string>
    <string name="width">Enter Width (in):</string>
    <string name="height">Enter Height (in):</string>
    <string name="currentobject">CURRENT OBJECT</string>
    <string name="howToUse"> How to Use</string>


</resources>