<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/floor">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:background="@android:color/darker_gray"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:textAlignment="center"
        />



    <TextView
        android:id="@+id/chooseLabel"
        android:layout_width="241dp"
        android:layout_height="24dp"
        android:layout_gravity="center"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/white"
        android:text="@string/choose"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="237dp"
        android:layout_height="185dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseLabel" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lengthInput"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/white"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        android:textColor="@color/white"

        android:textColorHint="@color/white"/>

    <TextView
        android:id="@+id/width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="44dp"
        android:text="@string/width"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length" />

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:text="@string/length"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/widthInput"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/white"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintStart_toEndOf="@+id/width"
        app:layout_constraintTop_toBottomOf="@+id/lengthInput"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/heightInput"
        android:layout_width="68dp"
        android:layout_height="42dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintStart_toEndOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/widthInput"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:text="@string/height"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/width" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/sizeBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_button_corners"
            android:textColor="@android:color/black"
            android:text="@string/back"
            />

        <Button
            android:id="@+id/sizeSelectionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:layout_toRightOf="@+id/sizeBackButton"
            android:layout_marginLeft="25dp"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_button_corners"
            android:textColor="@android:color/black"
            android:text="@string/next"
            />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>